--- a/src/pages/game/index.css
+++ b/src/pages/game/index.css
@@ -7,7 +7,19 @@ div.game {
 div.game span {
     color: white;
     font-size: 24px;
-    position: absolute;
+    position: relative;
+    z-index: 1;
+}
+
+div.highscore {
+    border-radius: 0 0 8px 8px;
+}
+
+div.highscore, div.currentscore {
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    background-image: linear-gradient(to bottom right, #FFCE00, #FE4880);
 }
 
 div.game-container {
