--- a/src/pages/game/index.css
+++ b/src/pages/game/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 div.game {
     display: flex;
     width: 100%;
@@ -23,6 +25,10 @@ div.highscore, div.currentscore {
 }
 
 div.game-container {
-    background-color: blue;
+    background-color: #8AC7DB;
     overflow: hidden;
+}
+
+h3.score-label {
+    font-family: 'Press Start 2P', cursive;
 }
